--- a/Liaison.Web.Asp/Views/Orbat/Index.cshtml
+++ b/Liaison.Web.Asp/Views/Orbat/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Liaison.BLL.Models.IUnit
+﻿@model Liaison.BLL.Models.Unit.IUnit
 
 @{
     Layout = null;
@@ -9,6 +9,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+  <link href="~/Content/bootstrap.min.css" rel="stylesheet" />    
+    <link href="~/Content/Site.css" rel="stylesheet" />
     <title>Index</title>
 </head>
 <body>
