--- a/Liaison.Web.Asp/Views/Orbat/NewAirForceBase.cshtml
+++ b/Liaison.Web.Asp/Views/Orbat/NewAirForceBase.cshtml
@@ -21,6 +21,10 @@
                     @Html.EditorFor(m => m.Mission)
                 </td>
                 <td>
+                    @Html.LabelFor(m=>m.MissionCode)
+                    @Html.EditorFor(m=>m.MissionCode)
+                </td>
+                <td>
                     @Html.LabelFor(m=>m.BaseId)
                     @Html.EditorFor(m=>m.BaseId)
                 </td>
